--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Full-Screen Video Section */
+/*Background video/image section */
 #video-section {
     position: relative;
     width: 100%;
@@ -6,15 +6,32 @@
     overflow: hidden;
 }
 
+/* Video Styling */
 #bg-video {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: 100%;
     object-fit: cover; /* Ensure the video covers the entire area */
+    object-position: center; /* Center the video */
+    transform: translate(-50%, -50%); /* Vertically and horizontally center the video */
     z-index: -1; /* Place video behind other content */
 }
+
+#bg-image {
+    display: none; /* Hide the image by default */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
 
 
 
@@ -103,4 +120,37 @@
   }
 
   
+  /*Change BG to image when scaling down */
+  @media (max-width: 1700px) {
+    #bg-video {
+        display: none; /* Hide the video on smaller screens */
+    }
 
+    #bg-image {
+        display: block; /* Show the image on smaller screens */
+        width: 100%;
+        height: 100vh; /* Make the image cover the entire viewport height */
+        object-fit: cover; /* Ensure the image covers the entire area */
+        object-position: center; /* Center the image */
+    }
+}
+
+/* Scale down image to 50% when screen width is 768px or smaller (mobile view) */
+@media (max-width: 768px) {
+
+    #video-section {
+        height: 50vh; /* Set height to 50% of the viewport height for mobile */
+    }
+    #bg-video {
+        display: none; /* Hide the video on smaller screens */
+    }
+
+    #bg-image {
+        display: block; /* Show the image */
+        width: 100%;
+        height: 20vh; /* Fill the entire height of the container */
+        object-fit: cover; /* Ensure the image covers the entire area */
+        object-position: center; /* Center the image */
+        min-height: 100%;
+    }
+}
